--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,15 +29,16 @@ jobs:
 
     - name: Upload exe to GitHub Packages
       env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      shell: pwsh
       run: |
-          PACKAGE_NAME=pw-soulkeeper
-          VERSION=1.0.0
-          FILE_PATH=dist/pw-soulkeeper.exe
-          OWNER=${{ github.repository_owner }}
+        $PACKAGE_NAME="pw-soulkeeper"
+        $VERSION="1.0.0"
+        $FILE_PATH="dist\pw-soulkeeper.exe"
+        $OWNER="${{ github.repository_owner }}"
 
-          curl -X POST \
-            -H "Authorization: Bearer $GITHUB_TOKEN" \
-            -H "Content-Type: application/octet-stream" \
-            --data-binary @"$FILE_PATH" \
-            "https://uploads.github.com/orgs/$OWNER/packages/generic/$PACKAGE_NAME/$VERSION/pw-soulkeeper.exe"
+        curl -X POST `
+          -H "Authorization: Bearer $env:GITHUB_TOKEN" `
+          -H "Content-Type: application/octet-stream" `
+          --data-binary @$FILE_PATH `
+          "https://uploads.github.com/orgs/$OWNER/packages/generic/$PACKAGE_NAME/$VERSION/pw-soulkeeper.exe"
