--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build pw-soulkeeper exe
+name: Build and Release pw-soulkeeper
 
 on:
   push:
@@ -22,23 +22,16 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+        pip install pyinstaller
 
     - name: Build exe with PyInstaller
-      run: |
-        pyinstaller --onefile --icon=icon.ico pw-soulkeeper.py
+      run: pyinstaller --onefile --icon=icon.ico --noconsole pw-soulkeeper.py
 
-    - name: Upload exe to GitHub Packages
+    - name: Create Release and Upload exe
+      uses: softprops/action-gh-release@v2
+      with:
+        tag_name: v1.0.0
+        name: pw-soulkeeper v1.0.0
+        files: dist/pw-soulkeeper.exe
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      shell: pwsh
-      run: |
-        $PACKAGE_NAME="pw-soulkeeper"
-        $VERSION="1.0.0"
-        $FILE_PATH="dist\pw-soulkeeper.exe"
-        $OWNER="${{ github.repository_owner }}"
-
-        curl -X POST `
-          -H "Authorization: Bearer $env:GITHUB_TOKEN" `
-          -H "Content-Type: application/octet-stream" `
-          --data-binary @$FILE_PATH `
-          "https://uploads.github.com/orgs/$OWNER/packages/generic/$PACKAGE_NAME/$VERSION/pw-soulkeeper.exe"
